freebsd11_wlan: Disable a spammy information print.

On some atheroswifi systems, it apparently prints every 100ms.
Hopefully helps with #14270.